# cart_service/docs/swagger.json
@@ -4,7 +4,7 @@
         "contact": {}
     },
     "paths": {
-        "/api/cart_service/carts/{id}": {
+        "/api/user/cart_service/carts/{id}": {
             "get": {
                 "description": "Retrieve the cart for a specific customer",
                 "consumes": [
@@ -162,7 +162,7 @@
                 }
             }
         },
-        "/api/cart_service/carts/{id}/item/{product_id}": {
+        "/api/user/cart_service/carts/{id}/item/{product_id}": {
             "delete": {
                 "description": "Remove a product from the customer's cart",
                 "consumes": [
